@@ -1,4 +1,5 @@
 Changes towards version 0.3:
+- Removed the redundant "GameExiting" variable -Michael
 - Added quit options to ingame menu (bug #409), from Paxtez
 - Fix position of blinking save/load in melee (bug #406), from Paxtez
 - New packaging/io system. - SvdB
